# AirSim

./: .gitignore
Unity/: README.md  build.cmd
Unity/AirLibWrapper/: AirsimWrapper.sln  README.md
Unity/AirLibWrapper/AirsimWrapper/: AirsimWrapper.vcxproj  CMakeLists.txt
Unity/AirLibWrapper/AirsimWrapper/Source/: Logger.cpp  Logger.h  PInvokeWrapper.h  UnityToAirSimCalls.h
Unity/AirLibWrapper/AirsimWrapper/include/: AirSimStructs.hpp  CarPawnUnity.h  CarRpcLibServerWrapper.h  CarServerSimModeUnityApi.h  DroneServerSimModeUnityApi.h  MultiRotorConnectorUnity.h  MultiRotorRpcLibServerWrapper.h  PInvokeWrapper.h  UnityImageCapture.h  VehiclePawnWrapper.h
Unity/AirLibWrapper/AirsimWrapper/src/: CarPawnUnity.cpp  CarRpcLibServerWrapper.cpp  MultiRotorConnectorUnity.cpp  MultiRotorRpcLibServerWrapper.cpp  PInvokeWrapper.cpp  UnityImageCapture.cpp  VehiclePawnWrapper.cpp
Unity/AirSimAssets/: AirSimAssets.sln  README.md
Unity/AirSimAssets/Assets/AirSimAssets/Scripts/: InitializeAirSim.cs
Unity/AirSimAssets/Assets/AirSimAssets/Scripts/Utilities/: AirSimSettings.cs  DataCaptureScript.cs
Unity/AirSimAssets/Assets/AirSimAssets/Scripts/Vehicles/: VehicleCompanion.cs
Unity/CarDemo/: CarDemo.sln
Unity/CarDemo/Assets/AirSimAssets/Scripts/: SmoothFollow.cs
Unity/CarDemo/Assets/AirSimAssets/Scripts/Utilities/: AirSimStructs.cs
Unity/CarDemo/Assets/AirSimAssets/Scripts/Vehicles/: IVehicleInterface.cs  Vehicle.cs
Unity/CarDemo/Assets/AirSimAssets/Scripts/Vehicles/Car/: Car.cs
Unity/CarDemo/Assets/Scenes/: CarDemo.unity
Unity/DroneDemo/: DroneDemo.sln
Unity/DroneDemo/Assets/AirSimAssets/Scripts/: SmoothFollow.cs
Unity/DroneDemo/Assets/AirSimAssets/Scripts/Utilities/: PInvokeWrapper.cs
Unity/DroneDemo/Assets/AirSimAssets/Scripts/Vehicles/: IAirSimInterface.cs
Unity/DroneDemo/Assets/AirSimAssets/Scripts/Vehicles/Multirotor/: Drone.cs
Unity/DroneDemo/Assets/Scenes/: DroneDemo.unity
Unity/UnityDemo/Assets/AirSimAssets/Materials/: FloorMaterial.mat
Unity/UnityDemo/Assets/AirSimAssets/Prefabs/: Drone.fbx  QuadCopter.prefab
Unity/UnityDemo/Assets/AirSimAssets/Scripts/Vehicles/: Vehicle.cs
Unity/UnityDemo/Assets/Scenes/: CarDemo.unity  DroneDemo.unity
Unity/UnityDemo/ProjectSettings/: ProjectVersion.txt
